# crux-game-engine

./: README.md  imgui.ini  meson.build
.cache/clangd/index/: camera.h.5CB0894B0CF198A0.idx  collision.h.016B3B24AAF8B578.idx  entity.h.818325B989772A1E.idx  error.cpp.932603ADA6F46508.idx  error.h.99E41B6C2CD922BF.idx  glad.c.0260030A403F386B.idx  glad.h.6458EA19DEE5CF90.idx  imconfig.h.A9968268A677516A.idx  imgui.cpp.A236DA029C5AE7EE.idx  imgui.h.99A9BDCE1516C819.idx  imgui_draw.cpp.C25CAB43CCDE8F94.idx  imgui_impl_glfw.cpp.050233D9CB6AE23C.idx  imgui_impl_glfw.h.22B511B847506E58.idx  imgui_impl_opengl3.cpp.45109861B3FE3A79.idx  imgui_impl_opengl3.h.3294AFC1D93740B0.idx  imgui_impl_opengl3_loader.h.3DBE30443E8BDEEE.idx  imgui_internal.h.6AD406429241896F.idx  imgui_tables.cpp.236706EE9C23B26C.idx  imgui_widgets.cpp.7A601D37933D8180.idx  imstb_rectpack.h.B7BB0C653F5A23B5.idx  imstb_textedit.h.1063C6B7B9D324FA.idx  imstb_truetype.h.96E1FBED6C8D8D17.idx  input.cpp.668584AD27F507FA.idx  input.h.BC0F6447C81C402E.idx  khrplatform.h.65CE7423EA26A7C8.idx  load_object.h.0FF27E10CF5FCD6F.idx  main.cpp.4AA7B8B055C5AB4E.idx  main.cpp.C2E183DB049472B0.idx  material.h.7D5B752E7424BF2E.idx  mesh.h.397BFE64207D887B.idx  physics_system.h.396BE4F3173149D5.idx  render.h.00DE82303174D5C0.idx  rigidbody.h.BA7C5E05BBDA78DD.idx  time.cpp.2A2E7F6838FA86A2.idx  time.h.3709D10F53F3BF79.idx  transform.h.9C6772B24BF239A4.idx  vertex.h.0B45506DCDC574EC.idx
editor/: editor.cpp  editor.h  main.cpp
engine/: engine.cpp  engine.h  main.cpp
engine/core/: camera.h  collision.h  entity.h  error.cpp  error.h  grid.h  input.cpp  input.h  material.h  mesh.h  physics_system.h  render.h  rigidbody.h  scene.h  time.cpp  time.h  transform.h  vertex.h
engine/examples/: scene.node.json
engine/tools/: load_object.h
